--- a/ds04/ex00/Confusion_Matrix.ipynb
+++ b/ds04/ex00/Confusion_Matrix.ipynb
@@ -207,24 +207,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fcd1a6e2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'              precision    recall  f1-score   support\\n\\n        Jedi       0.45      0.51      0.48        49\\n        Sith       0.47      0.41      0.44        51\\n\\n    accuracy                           0.46       100\\n   macro avg       0.46      0.46      0.46       100\\nweighted avg       0.46      0.46      0.46       100\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        Jedi       0.45      0.51      0.48        49\n",
+      "        Sith       0.47      0.41      0.44        51\n",
+      "\n",
+      "    accuracy                           0.46       100\n",
+      "   macro avg       0.46      0.46      0.46       100\n",
+      "weighted avg       0.46      0.46      0.46       100\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "cls_report = classification_report(actual_df['knight'], predicted_df['knight'])\n",
-    "cls_report"
+    "print(cls_report)"
    ]
   },
   {
@@ -262,14 +267,6 @@
     "plt.gca().figure.text(0.5, 0.05, 'Prediction', ha='center', fontsize=13)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08e80729",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -277,18 +274,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
   }
  },
  "nbformat": 4,
