--- a/ds04/ex01/Heatmap.ipynb
+++ b/ds04/ex01/Heatmap.ipynb
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6bcda184",
    "metadata": {},
    "outputs": [
@@ -1174,13 +1174,7 @@
    ],
    "source": [
     "plt.figure(figsize=(10,8))\n",
-    "sns.heatmap(\n",
-    "    cor, \n",
-    "    # annot=True,\n",
-    "    # fmt='g',\n",
-    "    # xticklabels=['Jedi','Sith'],\n",
-    "    # yticklabels=['Jedi','Sith']\n",
-    ")\n",
+    "sns.heatmap(cor)\n",
     "plt.title('Correlation Coefficient', fontsize=17, pad=20)\n",
     "plt.gca().xaxis.set_label_position('top') \n",
     "plt.gca().xaxis.tick_bottom()\n",
