--- a/ds03/ex01/Correlation.ipynb
+++ b/ds03/ex01/Correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5e72aedc",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a3334118",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "75e572be",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "[398 rows x 31 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8ad8c9e0",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "Name: knight, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,6 +482,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
