--- a/ds03/ex03/standardization.ipynb
+++ b/ds03/ex03/standardization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e8f847c2",
    "metadata": {},
    "outputs": [
@@ -10,37 +10,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (2.2.3)\n",
-      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.12/site-packages (3.10.1)\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (89 kB)\n",
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.10.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (11 kB)\n",
       "Collecting scikit-learn\n",
       "  Downloading scikit_learn-1.6.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.2.5)\n",
+      "Collecting numpy>=1.26.0 (from pandas)\n",
+      "  Downloading numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (1.3.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (4.57.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (1.4.8)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+      "  Downloading contourpy-1.3.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.5 kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+      "  Downloading fonttools-4.57.0-cp312-cp312-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (102 kB)\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+      "  Downloading kiwisolver-1.4.8-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.2 kB)\n",
       "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (11.2.1)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/conda/lib/python3.12/site-packages (from matplotlib) (3.2.3)\n",
+      "Collecting pillow>=8 (from matplotlib)\n",
+      "  Downloading pillow-11.2.1-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (8.9 kB)\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+      "  Downloading pyparsing-3.2.3-py3-none-any.whl.metadata (5.0 kB)\n",
       "Collecting scipy>=1.6.0 (from scikit-learn)\n",
       "  Downloading scipy-1.15.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
       "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "  Downloading joblib-1.5.0-py3-none-any.whl.metadata (5.6 kB)\n",
       "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
       "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Downloading scikit_learn-1.6.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.1/13.1 MB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hDownloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading pandas-2.2.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.7/12.7 MB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading matplotlib-3.10.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (8.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.6/8.6 MB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading scikit_learn-1.6.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.1/13.1 MB\u001b[0m \u001b[31m15.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading contourpy-1.3.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (323 kB)\n",
+      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Downloading fonttools-4.57.0-cp312-cp312-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading joblib-1.5.0-py3-none-any.whl (307 kB)\n",
+      "Downloading kiwisolver-1.4.8-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m14.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading numpy-2.2.5-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.1/16.1 MB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pillow-11.2.1-cp312-cp312-manylinux_2_28_x86_64.whl (4.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.6/4.6 MB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pyparsing-3.2.3-py3-none-any.whl (111 kB)\n",
       "Downloading scipy-1.15.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (37.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.3/37.3 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.3/37.3 MB\u001b[0m \u001b[31m16.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hDownloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4/4\u001b[0m [scikit-learn][0m [scikit-learn]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed joblib-1.4.2 scikit-learn-1.6.1 scipy-1.15.2 threadpoolctl-3.6.0\n",
+      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "Installing collected packages: tzdata, threadpoolctl, pyparsing, pillow, numpy, kiwisolver, joblib, fonttools, cycler, scipy, pandas, contourpy, scikit-learn, matplotlib\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14/14\u001b[0m [matplotlib]4\u001b[0m [matplotlib]n]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed contourpy-1.3.2 cycler-0.12.1 fonttools-4.57.0 joblib-1.5.0 kiwisolver-1.4.8 matplotlib-3.10.1 numpy-2.2.5 pandas-2.2.3 pillow-11.2.1 pyparsing-3.2.3 scikit-learn-1.6.1 scipy-1.15.2 threadpoolctl-3.6.0 tzdata-2025.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -51,20 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ff993721",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8e0379a3",
    "metadata": {},
    "outputs": [
@@ -209,14 +235,12 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_filename = os.path.join(os.getcwd(), 'ds03/assets/Test_knight.csv')\n",
-    "test_df = pd.read_csv(test_filename)\n",
     "train_filename = os.path.join(os.getcwd(), 'ds03/assets/Train_knight.csv')\n",
     "train_df = pd.read_csv(train_filename)\n",
     "train_df.set_index('knight')\n",
@@ -225,156 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "97295a81",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sensitivity</th>\n",
-       "      <th>Hability</th>\n",
-       "      <th>Strength</th>\n",
-       "      <th>Power</th>\n",
-       "      <th>Agility</th>\n",
-       "      <th>Dexterity</th>\n",
-       "      <th>Awareness</th>\n",
-       "      <th>Prescience</th>\n",
-       "      <th>Reactivity</th>\n",
-       "      <th>Midi-chlorien</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Stims</th>\n",
-       "      <th>Sprint</th>\n",
-       "      <th>Combo</th>\n",
-       "      <th>Delay</th>\n",
-       "      <th>Attunement</th>\n",
-       "      <th>Empowered</th>\n",
-       "      <th>Burst</th>\n",
-       "      <th>Grasping</th>\n",
-       "      <th>knight</th>\n",
-       "      <th>knight_encoded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.228075</td>\n",
-       "      <td>0.255326</td>\n",
-       "      <td>0.217469</td>\n",
-       "      <td>0.122333</td>\n",
-       "      <td>0.339141</td>\n",
-       "      <td>0.135019</td>\n",
-       "      <td>0.066909</td>\n",
-       "      <td>0.089852</td>\n",
-       "      <td>0.397475</td>\n",
-       "      <td>0.237907</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.177250</td>\n",
-       "      <td>0.092607</td>\n",
-       "      <td>0.351516</td>\n",
-       "      <td>0.140980</td>\n",
-       "      <td>0.115735</td>\n",
-       "      <td>0.184055</td>\n",
-       "      <td>0.365993</td>\n",
-       "      <td>0.171652</td>\n",
-       "      <td>Sith</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.607175</td>\n",
-       "      <td>0.420697</td>\n",
-       "      <td>0.595743</td>\n",
-       "      <td>0.473595</td>\n",
-       "      <td>0.439627</td>\n",
-       "      <td>0.275247</td>\n",
-       "      <td>0.346857</td>\n",
-       "      <td>0.521009</td>\n",
-       "      <td>0.263636</td>\n",
-       "      <td>0.092791</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.679267</td>\n",
-       "      <td>0.543846</td>\n",
-       "      <td>0.528495</td>\n",
-       "      <td>0.279138</td>\n",
-       "      <td>0.429073</td>\n",
-       "      <td>0.820619</td>\n",
-       "      <td>0.362677</td>\n",
-       "      <td>0.138463</td>\n",
-       "      <td>Jedi</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.188793</td>\n",
-       "      <td>0.253297</td>\n",
-       "      <td>0.193076</td>\n",
-       "      <td>0.096713</td>\n",
-       "      <td>0.315910</td>\n",
-       "      <td>0.305112</td>\n",
-       "      <td>0.221787</td>\n",
-       "      <td>0.198190</td>\n",
-       "      <td>0.216667</td>\n",
-       "      <td>0.382326</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.197868</td>\n",
-       "      <td>0.071569</td>\n",
-       "      <td>0.448590</td>\n",
-       "      <td>0.369561</td>\n",
-       "      <td>0.381709</td>\n",
-       "      <td>0.534364</td>\n",
-       "      <td>0.293940</td>\n",
-       "      <td>0.264200</td>\n",
-       "      <td>Sith</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Sensitivity  Hability  Strength     Power   Agility  Dexterity  Awareness  \\\n",
-       "0     0.228075  0.255326  0.217469  0.122333  0.339141   0.135019   0.066909   \n",
-       "1     0.607175  0.420697  0.595743  0.473595  0.439627   0.275247   0.346857   \n",
-       "2     0.188793  0.253297  0.193076  0.096713  0.315910   0.305112   0.221787   \n",
-       "\n",
-       "   Prescience  Reactivity  Midi-chlorien  ...     Stims    Sprint     Combo  \\\n",
-       "0    0.089852    0.397475       0.237907  ...  0.177250  0.092607  0.351516   \n",
-       "1    0.521009    0.263636       0.092791  ...  0.679267  0.543846  0.528495   \n",
-       "2    0.198190    0.216667       0.382326  ...  0.197868  0.071569  0.448590   \n",
-       "\n",
-       "      Delay  Attunement  Empowered     Burst  Grasping  knight  knight_encoded  \n",
-       "0  0.140980    0.115735   0.184055  0.365993  0.171652    Sith               0  \n",
-       "1  0.279138    0.429073   0.820619  0.362677  0.138463    Jedi               1  \n",
-       "2  0.369561    0.381709   0.534364  0.293940  0.264200    Sith               0  \n",
-       "\n",
-       "[3 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = train_df.copy()\n",
     "\n",
@@ -385,19 +263,24 @@
     "feature_cols = [col for col in df.columns if col not in ['knight', 'knight_encoded']]\n",
     "\n",
     "# Normalize\n",
-    "scaler = MinMaxScaler()\n",
-    "df_normalized = pd.DataFrame(scaler.fit_transform(df[feature_cols]), columns=feature_cols)\n",
+    "# scaler = MinMaxScaler()\n",
+    "# df_normalized = pd.DataFrame(scaler.fit_transform(df[feature_cols]), columns=feature_cols)\n",
     "\n",
-    "# Add back the label for visualization\n",
-    "df_normalized['knight'] = df['knight']\n",
-    "df_normalized['knight_encoded'] = df['knight_encoded']\n",
+    "# Z-Score Standardization\n",
+    "scaler_zscore = StandardScaler()\n",
+    "df_standardized = scaler_zscore.fit_transform(df[feature_cols])\n",
     "\n",
-    "df_normalized.head(3)"
+    "# # Add back the label for visualization\n",
+    "# df_normalized['knight'] = df['knight']\n",
+    "# df_normalized['knight_encoded'] = df['knight_encoded']\n",
+    "\n",
+    "# df_normalized.head(3)\n",
+    "# df_standardized['Empowered']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6594dcb6",
    "metadata": {},
    "outputs": [
@@ -413,11 +296,11 @@
     }
    ],
    "source": [
-    "mixing_pair = ('Midi-chlorien', 'Push')\n",
+    "separating_pair = ('Empowered', 'Prescience')\n",
     "plt.figure(figsize=(6, 4))\n",
-    "plt.scatter(df_normalized[mixing_pair[0]], df_normalized[mixing_pair[1]],  c=df_normalized['knight_encoded'], cmap='coolwarm', alpha=0.5, label='Train')\n",
-    "plt.xlabel(mixing_pair[0])\n",
-    "plt.ylabel(mixing_pair[1])\n",
+    "plt.scatter(df_standardized[separating_pair[0]], df_standardized[separating_pair[1]],  c=df_standardized['knight_encoded'], cmap='coolwarm', alpha=0.5, label='Train')\n",
+    "plt.xlabel(separating_pair[0])\n",
+    "plt.ylabel(separating_pair[1])\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
