--- a/ds04/ex06/democracy.ipynb
+++ b/ds04/ex06/democracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "28f65676",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2f5029b0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "7dbd43c9",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "61d2577b",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,10 +230,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "07ced3bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 1 1 1]\n",
+      "0    Sith\n",
+      "1    Jedi\n",
+      "2    Sith\n",
+      "3    Sith\n",
+      "4    Sith\n",
+      "Name: knight, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "# --- Separate features and label ---\n",
     "le = LabelEncoder()\n",
@@ -249,26 +263,13 @@
     "\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42)\n",
     "X_test = pd.DataFrame(scaler.fit_transform(test_df), columns=X.columns)\n",
-    "# print(y_encoded[:5])\n",
-    "# print(y[:5])"
+    "print(y_encoded[:5])\n",
+    "print(y[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "28006492",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Define models ---\n",
-    "rf = RandomForestClassifier(n_estimators=50, max_depth=4, random_state=42)\n",
-    "knn = KNeighborsClassifier(n_neighbors=15)\n",
-    "logreg = LogisticRegression(max_iter=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "d3508596",
    "metadata": {},
    "outputs": [
@@ -293,6 +294,11 @@
     }
    ],
    "source": [
+    "# --- Define models ---\n",
+    "rf = RandomForestClassifier(n_estimators=50, max_depth=4, random_state=42)\n",
+    "knn = KNeighborsClassifier(n_neighbors=15)\n",
+    "logreg = LogisticRegression(max_iter=500)\n",
+    "\n",
     "# --- Voting Classifier ---\n",
     "voting = VotingClassifier(estimators=[\n",
     "    ('rf', rf),\n",
@@ -311,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "6af2f8db",
    "metadata": {},
    "outputs": [
@@ -346,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "002cb538",
    "metadata": {},
    "outputs": [
@@ -372,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "54237a8c",
    "metadata": {},
    "outputs": [
